<resources>
    <string name="app_name">PaddleDetection</string>
    <!--   yolov3_mobilenet_v3 model-->
    <string name="MODEL_DIR_DEFAULT">models/yolov3_mobilenet_v3_for_cpu</string>
<!--    <string name="MODEL_DIR_DEFAULT">models/ppyolo_mobilenet_v3_large_for_cpu_nb</string>-->
    <string name="LABEL_PATH_DEFAULT">labels/coco-labels-2014_2017.txt</string>
    <string name="CPU_THREAD_NUM_DEFAULT">1</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="INPUT_WIDTH_DEFAULT">320</string>
    <string name="INPUT_HEIGHT_DEFAULT">320</string>
    <string name="INPUT_MEAN_DEFAULT">0.485,0.456,0.406</string>
    <string name="INPUT_STD_DEFAULT">0.229,0.224,0.225</string>
    <string name="SCORE_THRESHOLD_DEFAULT">0.2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="action_settings">敬请期待新功能</string>

    <!--   ssd_mobilenetv1 model-->
    <string name="MODEL_PATH_DEFAULT">models/ssdlite_mobilenet_v3_large_for_cpu_nb</string>
    <string name="SSD_LABEL_PATH_DEFAULT">labels/coco-labels-background.txt</string>
    <string name="IMAGE_PATH_DEFAULT">images/home.jpg</string>
    <string name="INPUT_SHAPE_DEFAULT">1,3,320,320</string>
    <string name="INPUT_COLOR_FORMAT_DEFAULT">RGB</string>
    <string name="SSD_SCORE_THRESHOLD_DEFAULT">0.5</string>

    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY">CHOOSE_INSTALLED_MODEL_KEY</string>
    <string name="MODEL_DIR_KEY">MODEL_DIR_KEY</string>
    <string name="LABEL_PATH_KEY">LABEL_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="INPUT_WIDTH_KEY">INPUT_WIDTH_KEY</string>
    <string name="INPUT_HEIGHT_KEY">INPUT_HEIGHT_KEY</string>
    <string name="INPUT_MEAN_KEY">INPUT_MEAN_KEY</string>
    <string name="INPUT_STD_KEY">INPUT_STD_KEY</string>
    <string name="SCORE_THRESHOLD_KEY">SCORE_THRESHOLD_KEY</string>
</resources>

