<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/MODEL_DIR_DEFAULT"
        android:key="@string/CHOOSE_PRE_INSTALLED_MODEL_KEY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="Choose pre-installed models" />
    <EditTextPreference
        android:defaultValue="@string/MODEL_DIR_DEFAULT"
        android:key="@string/MODEL_DIR_KEY"
        android:title="Model dir" />
    <EditTextPreference
        android:defaultValue="@string/LABEL_PATH_DEFAULT"
        android:key="@string/LABEL_PATH_KEY"
        android:title="Label path" />
    <ListPreference
        android:defaultValue="@string/CPU_THREAD_NUM_DEFAULT"
        android:entries="@array/cpu_thread_num_entries"
        android:entryValues="@array/cpu_thread_num_values"
        android:key="@string/CPU_THREAD_NUM_KEY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="CPU thread num" />
    <ListPreference
        android:defaultValue="@string/CPU_POWER_MODE_DEFAULT"
        android:entries="@array/cpu_power_mode_entries"
        android:entryValues="@array/cpu_power_mode_values"
        android:key="@string/CPU_POWER_MODE_KEY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="CPU power mode" />
    <EditTextPreference
        android:defaultValue="@string/INPUT_WIDTH_DEFAULT"
        android:key="@string/INPUT_WIDTH_KEY"
        android:title="Input width" />
    <EditTextPreference
        android:defaultValue="@string/INPUT_HEIGHT_DEFAULT"
        android:key="@string/INPUT_HEIGHT_KEY"
        android:title="Input height" />
    <EditTextPreference
        android:defaultValue="@string/INPUT_MEAN_DEFAULT"
        android:key="@string/INPUT_MEAN_KEY"
        android:title="Input mean: (channel/255-mean)/std" />
    <EditTextPreference
        android:defaultValue="@string/INPUT_STD_DEFAULT"
        android:key="@string/INPUT_STD_KEY"
        android:title="Input std: (channel/255-mean)/std" />
    <EditTextPreference
        android:key="@string/SCORE_THRESHOLD_KEY"
        android:defaultValue="@string/SCORE_THRESHOLD_DEFAULT"
        android:title="Score threshold: (0.0, 1.0)" />
</PreferenceScreen>
